crates/oxidelake-tui/tests/snapshots/tui_render_test__initial_frame_120x40.snap
---
source: crates/oxidelake-tui/tests/tui_render_test.rs
expression: text
---
"OxideLake  data/t.parquet — SELECT k, sum(v), count(v) FROM t WHERE k >= 2 AND v < 4.0 GROUP BY k                       "
"┌ Plan DAG ────────────────────────────────────────────────┐┌ Telemetry ───────────────────────────────────────────────┐"
"│▶ GpuAggregateExec [CUDA]                                 ││████████████████████████████████████████████              │"
"│    └─ GpuFilterExec [CUDA]                               ││█████████████████VRAM: 6.0 GiB / 8.0 GiB ███              │"
"│      └─ DataSourceExec [CPU]                             ││██████████████████████                                    │"
"│                                                          ││███████████████host RAM: 1.5 GiB / 4.0 GiB                │"
"│                                                          ││                                                          │"
"│                                                          ││                  disk spill: 512.0 MiB                   │"
"│                                                          ││PCIe  H2D 35.3 MiB  D2H 18.6 MiB                          │"
"│                                                          ││NVMe  spilled 3.0 GiB (42 demotions)  reloaded 256.0 MiB (│"
"│                                                          ││spill on the query path                                   │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          │└──────────────────────────────────────────────────────────┘"
"│                                                          │┌ Describe ────────────────────────────────────────────────┐"
"│                                                          ││column  type   min     max    nulls   p25    p50    p99   │"
"│                                                          ││k       Int64  0       99     0       24     49     98    │"
"└──────────────────────────────────────────────────────────┘│v       Float6 0.0     24.0   76923   6.0    12.0   23.75 │"
"┌ Inspector ───────────────────────────────────────────────┐│s       Utf8   s0      s6     0                           │"
"│GpuAggregateExec [CUDA]                                   ││                                                          │"
"│group_by=[k], aggr=[SUM(v), COUNT(v)]                     ││                                                          │"
"│                                                          ││                                                          │"
"│rows in              812400                               ││                                                          │"
"│rows out                  9                               ││                                                          │"
"│batches                 100                               ││                                                          │"
"│latency/batch      1.840 ms                               ││                                                          │"
"│memory             16.0 MiB                               ││                                                          │"
"│H2D / D2H    12.4 MiB /  512 B                            ││                                                          │"
"│cpu fallback        0 / 100                               ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
" ↑/↓ select operator  Tab next panel  q quit                                                                            "
